--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/rangle/build-npm-repo-to#readme",
   "dependencies": {
     "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
